[package]
name = "TestCompression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imagequant = "4.2.0"
log = "0.4.19"
log4rs = "1.2.0"
lz4 = "1.24.0"
oxipng = "8.0.0"
zopfli = "0.7.4"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.7.0"
